--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,13 @@ Plant Disease Detection
       display: none;
     }
   }
+  .bttn-pill.bttn-lg.btn-success {
+    width: 1000px;
+    height: 150px;
+    font-size: xx-large;
+  }
 </style>
+
 <div class="row mb-5 text-center text-white laptop">
     <div class="col-lg-10 mx-auto">
         <h1 class="display-4" style="padding-top: 2%;font-weight: 400;color: rgb(4, 54, 4);"><b>Intelligent Framework for Crop Data Analytics and Crop Recommender System </b></h1>
@@ -27,24 +33,32 @@ Plant Disease Detection
 
 <center class="laptop">
     <a href="/index">
-    <button class = "bttn-pill bttn-lg btn-success" style="background-color: aquamarine;"><b style="color: black;">Crop Disease Detection System</b></button>
+    <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Crop Disease Detection System</b> <i class="fa fa-camera"></i></button>
 </a>
 </center>
 
 <br>
 <center class="laptop">
   <a href="/index2">
-  <button class = "bttn-pill bttn-lg btn-success" style="background-color: aquamarine;"><b style="color: black;">Crop Recommender System</b></button>
+  <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Crop Recommender System</b> <i class="fa fa-leaf"></i> </button>
 </a>
 </center>
 
 <br>
 <center class="laptop">
   <a href="/market">
-  <button class = "bttn-pill bttn-lg btn-success" style="background-color: aquamarine;"><b style="color: black;">Suppliments</b></button>
+  <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Suppliments</b> <i class="fa fa-medkit"></i></button>
 </a>
 </center>
 
+<br>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
+<center class="laptop">
+  <a href="/profile">
+  <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Profile</b> <i class="fa fa-address-card-o"></i></button>
+</a>
+</center>
 
 
 
