--- a/templates/home.html
+++ b/templates/home.html
@@ -55,8 +55,8 @@ Plant Disease Detection
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
 <center class="laptop">
-  <a href="/profile">
-  <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Profile</b> <i class="fa fa-address-card-o"></i></button>
+  <a href="/crop-data-analytics">
+  <button class = "bttn-pill bttn-lg btn-success" style="background-color: white;"><b style="color: black;">Crop Data Analytics</b> <i class="fa fa-address-card-o"></i></button>
 </a>
 </center>
 
