--- a/templates/login.html
+++ b/templates/login.html
@@ -168,7 +168,7 @@
             </ul>
             <ul class = "navbar-nav">
                 <li class="navbar-brand active logout">
-                    <a class="nav-link" href="/register" style="color: white;">REGISTER</a>
+                    <a class="nav-link" href="/register" style="color: white; font-size: x-large;">Register</a>
                 </li>
             </ul>
         </div>
@@ -190,6 +190,9 @@
         </form> 
     </div>
     <style>
+        * {
+            font-family: sans-serif;
+        }
         #link1, #link2, #link3, #link4 {
             font-size: x-large;
             color: white;
@@ -199,7 +202,7 @@
             color: white;
             /* text-decoration: underline; */
             transition: 200ms;
-            transform: scale(1.1)
+            transform: scale(1.005)
         }
     </style>
     {% block body %}
