--- a/templates/register.html
+++ b/templates/register.html
@@ -164,7 +164,11 @@
                 <li class="navbar-brand active">
                     <a class="nav-link" id = "link1" href="/" >Intelligent Framework for Crop Data Analytics and Crop Recommender System</a>
                 </li>
-                
+            </ul>
+            <ul class = "navbar-nav">
+                <li class="navbar-brand active logout">
+                    <a class="nav-link" href="/login" style="color: white; font-size: x-large;">Login</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -203,6 +207,9 @@
         </form>
     </div>
     <style>
+        * {
+            font-family: sans-serif;
+        }
         #link1, #link2, #link3, #link4 {
             font-size: x-large;
             color: white;
