--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
                     <a class="nav-link" href="/profile" id = "link5" style="color: white;">Profile <i class="fa fa-address-card-o"></i></a>
                 </li>
                 <li class="navbar-brand active ">
-                    <a class="nav-link" href="/logout" id = "link6" style="color: white;">LOGOUT</a>
+                    <a class="nav-link" href="/logout" id = "link6" style="color: white;">Logout</a>
                 </li>
             </ul>
         </div>
@@ -178,7 +178,7 @@
             color: white;
             /* text-decoration: underline; */
             transition: 200ms;
-            transform: scale(1.1)
+            transform: scale(1.01)
         }
     </style>
     {% block body %}
